adding workflow file for jmeter test

--- a/.github/workflows/run-jmeter.yml
+++ b/.github/workflows/run-jmeter.yml
@@ -1,1 +1,53 @@
+name : Run JMeter Tests
+
+on:
+    push:
+        branches:
+            -   main
+        paths:
+            -   'github/workflows/run-jmeter.yml'
+
+    workflow_dispatch:
+
+
+jobs:
+    jmeter-tests:
+        runs-on: ubuntu-latest
+
+        steps:
+        -   name: Checkout Code
+            uses: actions/checkout@v4
+        -   name: Setup Java
+            uses: actions/setup-java@v4
+            with:
+                java-version: '11'
+                distribution: 'temurin'
+
+        -   name: Install JMeter
+            run: |
+                wget https://downloads.apache.org//jmeter/binaries/apache-jmeter-5.6.3.tgz
+                tar -xzf apache-jmeter-5.6.3.tgz
+                mv apache-jmeter-5.6.3 ~/jmeter
+
+        -   name : Run JMeter Tests
+            run: |
+                ~/jmeter/bin/jmeter -n -t github_01_ci_cd.jmx -l results.jtl
+
+        -   name: Generate JMeter HTML Report
+            run: |
+                ~/jmeter/bin/jmeter -g results.jtl -o html-report
+
+        -   name: Upload HTML Report
+            uses: actions/upload-artifact@v4
+            with:
+                name: jmeter-html-report
+                path: html report
+
+        -   name : Upload JMeter report
+            uses:  actions/upload-artifact@v4
+            with:
+                name: jmeter-results
+                path: results.jtl
+
+
 
